--- a/01-npm/package.json
+++ b/01-npm/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "02-nodejs",
+  "name": "01-npm",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC"
 }
